# DefaultApps

./: README.md  io.github.pjoscheh.DefaultApps.json  meson.build  notes.md
.flatpak-builder/cache/refs/heads/x86_64-io.github.pjoscheh.DefaultApps.json/: init
.flatpak-builder/checksums/: x86_64-io.github.pjoscheh.DefaultApps.json
data/: io.github.pjoscheh.DefaultApps.desktop.in  io.github.pjoscheh.DefaultApps.gschema.xml  io.github.pjoscheh.DefaultApps.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: addApp.ui  addApp.vala  application.vala  defaultapps.gresource.xml  fileHandler.vala  main.blp  main.vala  meson.build  settings  window.ui  window.vala  windowListener.vala
